--- a/lab-profile-app/server/package.json
+++ b/lab-profile-app/server/package.json
@@ -16,7 +16,8 @@
     "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "mongoose": "^6.0.14",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   },
   "devDependencies": {}
 }
